--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         
-   
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/es2015/destructuring.js"
+            "name": "Launch index",
+            "program": "${workspaceFolder}/myexpress/index.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch myexpress",
+            "program": "${workspaceFolder}/myexpress/lib/myexpress.js"
         }
     ]
 }
